# DesktopLM

./: .gitignore  DesktopLM.txt  README.md  build_exe.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tools_list.py
LLMS/: LLM.py  SLM.py  __init__.py  local_llm.py  model_selector.py  provider.py  sys_prompt_slm.py
MemoryManager/: Orchesterator.py  __init__.py  base_store.py  memory.py  settings.py
MemoryManager/Database/: SQLmemory.py  __init__.py  nosqlmemory.py  vectormemeorystore.py
agent/: __init__.py  cli.py  config.py  demos.py  doctor.py  graph.py  permissions.py  pipeline.py  run_logging.py  system_prompt.py  trace_callbacks.py
data/sql/: memory.db
data/vectordb/: chroma.sqlite3
docs/: tools.md
scripts/: memory_write_demo.py
tools/: __init__.py  create_file.py  data.py  mcp_config.json  mcp_loader.py  registry.py  retrive_file.py  shell_executor.py  web_search.py  workspace.py
